tests/fixtures/errors/unknown_tag.h
/**
 * @nb
 * @nb_prop_r foo
 */
class Foo {};
